This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-06-27:

- Fixed: a builtin activated with the 'builtin' command was not found if
  invoked within a namespace block on the same line as the 'builtin' command.

2024-06-26:

- Fixed: when the --showme option was used with a command containing multiple
  redirections, only the first redirection was shown, without a newline. This
  bug was introduced along with --showme in ksh 93s- 2006-09-12.

2024-03-05:

- Fixed a corner case bug causing incorrect field splitting behaviour of a
  repeated whitespace character in the IFS variable. The behaviour was
  incorrect when the posix option was changed while xtrace was on, and when a
  shell discipline function was defined for IFS. Bug introduced on 2022-03-05.

2024-03-03:

- Fixed incorrect behaviour of {n1..n2..incr} range brace expansions, which
  sometimes occurred if the value of n1 multiplied by incr falls outside of
  the INT_MIN..INT_MAX range. For instance, {1696512000..1696512000..300}
  now correctly outputs only 1696512000.

2024-03-30:

- A regression was fixed in ordinal specifiers in 'printf %T' date
  specifications. For example,
	printf '%(%F)T\n' '4th tuesday in march 2016'
  wrongly printed '2016-04-09' and now again correctly prints '2016-03-22'.
  This regression was introduded with the printf fixes on 2023-05-18.

2024-03-24:

- We now support building a dynamically linked ksh 93u+m with libast,
  libdll, libcmd, and libshell available as dynamic libraries for other
  applications to use. The dynamically linked version is built in a 'dyn'
  subdirectory; there are no changes to the statically linked version. See
  README.md for more information. Dynamic linking is tested and supported
  on Linux, Android, macOS, FreeBSD, NetBSD, OpenBSD, illumos and Solaris.