@@ -6231,11 +6231,11 @@ causes the next word to be checked for
 alias substitution.
 With the
 .B \-t
-option, each name is looked up as a command in
-.B $PATH
-and its path is added to the hash table as a 'tracked alias'.
-If no name is given, this prints the hash table. See
-.BR hash.
+option,
+.B alias
+acts like
+.BR hash ;
+see there.
 Without the
 .B \-t
 option,
@@ -6845,7 +6845,7 @@ The option
 .B #
 can only be specified as the first option.
 .TP
-\f3hash\fP \*(OK \f3\-r\fP \f2\^\fP\*(CK \*(OK \f3utility\^\fP \*(CK
+\f3hash\fP \*(OK \f3\-r\fP \f2\^\fP\*(CK \*(OK \f2utility\^\fP ... \*(CK
 .B hash
 displays or modifies the hash table with the locations of recently used
 programs. If given no arguments, it lists all command/path associations
@@ -6856,6 +6856,9 @@ performs a
 search for each
 .I utility\^
 supplied and adds the result to the hash table.
+Any
+.I utility\^
+that is not found is silently ignored.
 The
 .B \-r
 option empties the hash table. This can also be achieved by resetting
