@@ -305,4 +305,19 @@ got=$({ "$SHELL" -i -c 'alias r=foo; ./script'; } 2>&1) \
 fi # !SHOPT_SCRIPTONLY
 
 # ======
+# Feature request for 93u+m/1.1+: https://github.com/ksh93/ksh/issues/732
+got=$(hash -r _non_existent_nonsense_ ls 2>&1; echo status=$?; hash) ln=$LINENO
+if	[[ ${.sh.version} == *93u+m/1.0.* || ${.sh.version} != *93u+m/* ]]
+then	exp=$'status=0\nls='$(command -v ls)
+else	exp=$0[$ln$']: hash: _non_existent_nonsense_: not found\nstatus=1\nls='$(command -v ls)
+fi
+[[ $got == "$exp" ]] || err_exit "hash nonexistent command (expected $(printf %q "$exp"), got $(printf %q "$got"))"
+
+# Bug fix: 'hash'/'alias -t' should not autoload functions
+echo 'bad_func() { :; }' >bad_func
+chmod +x bad_func  # bug only triggered if file is executable
+(FPATH=$PWD; alias -t bad_func 2>/dev/null; typeset -f bad_func >/dev/null)
+(($? > 0)) || err_exit "'hash'/'alias -t' autoloads function"
+
+# ======
 exit $((Errors<125?Errors:125))
