@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-06-30:
+
+- Fixed: the 'hash' and 'alias -t' commands no longer autoload functions
+  from executable files on FPATH as an unintended side effect.
+
 2024-06-27:
 
 - Fixed: a builtin activated with the 'builtin' command was not found if
